create my contact details section relate #3

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>mariam abunada portfolio</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Montserrat"
@@ -29,6 +30,27 @@
         skills eager to secure a Graphic Design position. Ready to help the team
         achieve company goals.
       </p>
+    </section>
+    <section>
+      <h3 class="myskills">My Skills</h3> 
+      <p class="photoshop">Photoshop 95%</p>
+      <p class="coreldraw">coreldraw 90%</p>
+      <p class="illustrator">illustrator 85%</p>
+      <p class="socialmediadesigns">social media designs 90%</p>
+      <p class="logodesign">logo design 85%</p>
+      <p class="printingdesigns">printing designs 90%</p>
+      <p class="microsoft">microsoft package 90%</p>
+      <p class="google">google package 85%</p>
+    </section>
+    <section class="contact" id="contacts" style="margin-bottom:64px">
+      <h2>My Contact Details</h2>
+      <hr class="w3-opacity">
+      <div class="w3-section">
+        <p><i class="fas fa-map-marker-alt"> </i> Palestine, Gaza</p>
+        <p><i class="fas fa-phone"></i> Phone: +972 597 962 285</p>
+        <p><i class="fa fa-envelope"> </i> Email: mariamabunada2000@gmail.com</p>
+        <p><i class="fab fa-behance"></i> mariam abunada</p>
+        <p><i class="fab fa-twitter"></i> mariam.abunada</p>
     </section>
   </body>
 </html>
