updatin the file style relate #9

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p class="logodesign">logo design  85%</p>
       <p class="printingdesigns">printing designs  90%</p>
       <p class="microsoft">microsoft package  90%</p>
-      <p class="google">google package  85%</p>
+      <p class="google">google package  85%</p> checkout -b
     </section>
     <section class="contact" id="contacts" style="margin-bottom:64px">
       <p id="box3">Contact details</p>
