editing the file relate #13

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         achieve company goals.
       </p>
     </section>
-<<<<<<< HEAD
     <section class="myskills">
       <p id="box2"> My Skills</p> 
       <br/>
@@ -42,7 +41,7 @@
       <p class="logodesign">logo design  85%</p>
       <p class="printingdesigns">printing designs  90%</p>
       <p class="microsoft">microsoft package  90%</p>
-      <p class="google">google package  85%</p>
+      <p class="google">google package  85%</p> checkout -b
     </section>
     <section class="contact" id="contacts" style="margin-bottom:64px">
       <p id="box3">Contact details</p>
@@ -54,37 +53,5 @@
         <p><i class="fab fa-behance myicon"></i> mariam abunada</p>
         <p><i class="fab fa-twitter myicon"></i> mariam.abunada</p>
     </section>
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> main
-    <section>
-      <h3 class="myskills">My Skills</h3> 
-      <p class="photoshop">Photoshop 95%</p>
-      <p class="coreldraw">coreldraw 90%</p>
-      <p class="illustrator">illustrator 85%</p>
-      <p class="socialmediadesigns">social media designs 90%</p>
-      <p class="logodesign">logo design 85%</p>
-      <p class="printingdesigns">printing designs 90%</p>
-      <p class="microsoft">microsoft package 90%</p>
-      <p class="google">google package 85%</p>
-    </section>
-<<<<<<< HEAD
-    <section class="contact" id="contacts" style="margin-bottom:64px">
-      <h2>My Contact Details</h2>
-      <hr class="w3-opacity">
-      <div class="w3-section">
-        <p><i class="fas fa-map-marker-alt"> </i> Palestine, Gaza</p>
-        <p><i class="fas fa-phone"></i> Phone: +972 597 962 285</p>
-        <p><i class="fa fa-envelope"> </i> Email: mariamabunada2000@gmail.com</p>
-        <p><i class="fab fa-behance"></i> mariam abunada</p>
-        <p><i class="fab fa-twitter"></i> mariam.abunada</p>
-    </section>
-=======
-=======
->>>>>>> main
->>>>>>> main
->>>>>>> main
   </body>
 </html>
