editing the style relate #15

--- a/index.html
+++ b/index.html
@@ -3,55 +3,60 @@
   <head>
     <title>mariam abunada portfolio</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <link rel="stylesheet" href="/all.min.css">
+    <link rel="stylesheet" href="all.min.css">
     <link rel="stylesheet" href="style.css">
     <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Montserrat"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
   </head>
   <body>
-    <div class="bg-img"></div>
-    <header class="myname" id="manames">
-      <h1 class="name"><b>MARIAM ABUNADA</b></h1>
-      <p class="role">Graphic Designer</p>
+    <div class="container">
+    <header class="myname">
+      <h1 class="name">MARIAM ABUNADA</h1>
+      <h5 class="role">Graphic Designer</h5>
     </header>
-    <section class="aboutme" id="aboutmes">
-      <p id="box1"> About me</p>
+   <section class="aboutme">
+     <section class="box" >About me</section>
       <p>
-        <br />
         Graphic Designer proficient in job-related software, including Adobe
-        Photoshop, Adobe Illustrator, and Corel Draw.<br />
+        Photoshop, Adobe Illustrator, and Corel Draw.
         Experienced in creating designs, sample layouts, and concepts and
         generating new ideas. An enthusiastic individual accustomed to working
-        in deadline-driven environments.<br />
-        Well-developed verbal and written communication skills.<br />
+        in deadline-driven environments.
+        Well-developed verbal and written communication skills.
         A hardworking and passionate job seeker with strong organizational
         skills eager to secure a Graphic Design position. Ready to help the team
         achieve company goals.
       </p>
     </section>
     <section class="myskills">
-      <p id="box2"> My Skills</p> 
-      <br/>
-      <p class="photoshop">Photoshop  95%</p>
-      <p class="coreldraw">coreldraw  90%</p>
-      <p class="illustrator">illustrator  85%</p>
-      <p class="socialmediadesigns">social media designs  90%</p>
-      <p class="logodesign">logo design  85%</p>
-      <p class="printingdesigns">printing designs  90%</p>
-      <p class="microsoft">microsoft package  90%</p>
-      <p class="google">google package  85%</p> checkout -b
-    </section>
-    <section class="contact" id="contacts" style="margin-bottom:64px">
-      <p id="box3">Contact details</p>
-      <br/>
-      <div class="w3-section">
+      <section  class="box"> My Skills</section> 
+      <section>
+      <ul class="list">
+       <li>Photoshop  95%</li>
+       <li>coreldraw  90%</li>
+       <li>illustrator  85%</li>
+       <li>social media designs  90%</li>
+       <li>logo design  85%</li>
+       <li>printing designs  90%</li>
+       <li>microsoft package  90%</li>
+       <li>google package  85%</li>
+      </ul></section>
+    </section>  
+   <section class="contact" style="margin-bottom:64px">
+      <section  class="box">Contact details</section>
+      <section class="icons">
         <p><i class="fas fa-map-marker-alt myicon"> </i> Palestine, Gaza</p>
-        <p><i class="fas fa-phone myicon"></i> Phone: +972 597 962 285</p>
-        <p><i class="fa fa-envelope myicon"> </i> Email: mariamabunada2000@gmail.com</p>
+        <p><i class="fas fa-phone myicon"></i> +972 597 962 285</p>
         <p><i class="fab fa-behance myicon"></i> mariam abunada</p>
         <p><i class="fab fa-twitter myicon"></i> mariam.abunada</p>
+        <p><i class="fa fa-envelope myicon"> </i> Email: mariamabunada2000@gmail.com</p>
+      </section>
     </section>
   </body>
 </html>
