--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>mariam abunada portfolio</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <link rel="stylesheet" href="all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="all.min.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
@@ -15,48 +15,86 @@
     />
   </head>
   <body>
-    <div class="container">
-    <header class="myname">
-      <h1 class="name">MARIAM ABUNADA</h1>
-      <h5 class="role">Graphic Designer</h5>
+    <section><h4 class="myname">MARIAM ABUNADA</h4></section>
+    <header>
+      <h5 class="navs"><a href="#contact">Contact</a></h5>
+      <h5 class="navs"><a href="#skills">Skills</a></h5>
+      <h5 class="navs"><a href="#about">About</a></h5>
+      <h5 class="navs"><a href="#home">Home</a></h5>
     </header>
-   <section class="aboutme">
-     <section class="box" >About me</section>
-      <p>
-        Graphic Designer proficient in job-related software, including Adobe
-        Photoshop, Adobe Illustrator, and Corel Draw.
-        Experienced in creating designs, sample layouts, and concepts and
-        generating new ideas. An enthusiastic individual accustomed to working
-        in deadline-driven environments.
-        Well-developed verbal and written communication skills.
-        A hardworking and passionate job seeker with strong organizational
-        skills eager to secure a Graphic Design position. Ready to help the team
-        achieve company goals.
-      </p>
-    </section>
-    <section class="myskills">
-      <section  class="box"> My Skills</section> 
-      <section>
-      <ul class="list">
-       <li>Photoshop  95%</li>
-       <li>coreldraw  90%</li>
-       <li>illustrator  85%</li>
-       <li>social media designs  90%</li>
-       <li>logo design  85%</li>
-       <li>printing designs  90%</li>
-       <li>microsoft package  90%</li>
-       <li>google package  85%</li>
-      </ul></section>
-    </section>  
-   <section class="contact" style="margin-bottom:64px">
-      <section  class="box">Contact details</section>
-      <section class="icons">
-        <p><i class="fas fa-map-marker-alt myicon"> </i> Palestine, Gaza</p>
-        <p><i class="fas fa-phone myicon"></i> +972 597 962 285</p>
-        <p><i class="fab fa-behance myicon"></i> mariam abunada</p>
-        <p><i class="fab fa-twitter myicon"></i> mariam.abunada</p>
-        <p><i class="fa fa-envelope myicon"> </i> Email: mariamabunada2000@gmail.com</p>
+    <div class="container">
+      <section class="home"  id="home">
+        <section class="para">
+          <p class="fpara">Hi there!</p>
+          <p class="spara">It's mariam ^_^</p>
+        </section>
+        <img src="./vector-0٢.png" class="img1" />
       </section>
-    </section>
+      <section class="aboutme" id="about">
+        <section class="title" >About me</section>
+        <p class="aboutpara">
+          my name is mariam, 22 years old, 
+          front end web development learner, 
+          I'm also interested in graphic design
+          such as social media and printings and logo design.
+        </p>
+      </section>
+      <section class="myskills" id="skills">
+        <section class="title" >My Skills</section>
+       
+        <div class="slideshow-container">
+          <div class="mySlides fade">
+            <div class="numbertext">1 / 6</div>
+            <img class="images" src="./programming (1).png" />
+            <div class="text">HTML,CSS & JS</div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">2 / 6</div>
+            <img class="images" src="./photoshop.png" />
+            <div class="text">Photoshop</div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">3 / 6</div>
+            <img class="images" src="./cdr.png" />
+            <div class="text">coreldraw</div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">4 / 6</div>
+            <img class="images" src="./illustrator.png" />
+            <div class="text">illustrator</div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">5 / 6</div>
+            <img class="images" src="./google-forms.png" />
+            <div class="text">google office suite</div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext">6 / 6</div>
+            <img class="images" src="./illustrator (1).png" />
+            <div class="text">microsoft office suite</div>
+          </div>
+        </div>
+      </section>
+
+      <section class="contact" id="contact">
+        <section class="title">Contact details</section>
+        <ul class="icons">
+          <li><i class="fas fa-map-marker-alt myicon"> </i> Palestine, Gaza</li>
+          <li><i class="fas fa-phone myicon"></i> +972 597 962 285</li>
+          <li><i class="fab fa-behance myicon"></i> mariam abunada</li>
+          <li><i class="fab fa-twitter myicon"></i> mariam.abunada</li>
+          <li>
+            <i class="fa fa-envelope myicon"> </i> Email:
+            mariamabunada2000@gmail.com
+          </li>
+        </ul>
+      </section>
+    </div>
+    <script src="./script.js"></script>
   </body>
 </html>
